# godot-rapier-3d

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  LICENSE.txt  README.md  UP TO.txt  export_presets.cfg  godot-rapier-3d.gdext.dist  godot-rapier-3d.gdext.test  godot-rapier-3d.gdextension  godot-rapier-3d.gdextension.uid  gr3d_logo.png.import  icon.svg.import  index.html  main.tscn  project.godot  sitemap.xml
addons/godot-rapier-3d/: .gitignore  Cargo.toml  Rapier3D.gd  Rapier3D.gd.uid  Rapier3DDebugger.gd  Rapier3DDebugger.gd.uid  debug_info.gd  debug_info.gd.uid  godot-rapier-3d.gd  plugin.cfg
addons/godot-rapier-3d/gd/: GR3DRuntime.gd  GR3DRuntime.gd.uid  draw_line.gd  draw_line.gd.uid  fixup_cuids.gd  fixup_cuids.gd.uid  ping_timer.gd  ping_timer.gd.uid  project_settings.gd.uid  queue.gd  queue.gd.uid  rpc_adapter.gd  rpc_adapter.gd.uid
addons/godot-rapier-3d/gd/sync/: GR3DSync.gd  GR3DSync.gd.uid  NetworkAdapter.gd  NetworkAdapter.gd.uid  action_buffer_frame.gd  action_buffer_frame.gd.uid  actions.gd  actions.gd.uid  classes.gd  classes.gd.uid  lifecycle.gd  lifecycle.gd.uid  message_serializer.gd  message_serializer.gd.uid  network_adapter.gd  network_adapter.gd.uid  network_callbacks.gd  network_callbacks.gd.uid  peer.gd  peer.gd.uid  peers.gd  peers.gd.uid  rpc_adapter.gd  serde.gd  serde.gd.uid  state_hash_frame.gd  state_hash_frame.gd.uid  utils.gd  utils.gd.uid
addons/godot-rapier-3d/gdscript/: debug_lines.gd  debug_lines.gd.uid  physics_controls.gd  physics_controls.gd.uid  physics_controls.tscn  physics_state.gd  physics_state.gd.uid  project_settings.gd  project_settings.gd.uid  utils.gd  utils.gd.uid
addons/godot-rapier-3d/gdscript/gizmos/: collider3D.gd  collider3D.gd.uid  shapes.gd.uid
addons/godot-rapier-3d/icons/: box_shape3d.svg.import  capsule_shape3d.svg.import  col3d.svg.import  cylinder_shape3d.svg.import  dbug.svg.import  object_character_body.svg.import  object_collider.svg.import  object_rigid_body.svg.import  rapier-logo.svg.import  rapier_area_3d.svg.import  rapier_character_body_3d.svg.import  rapier_collision_shape_3d.svg.import  rapier_playback.svg.import  rapier_rigid_body_3d.svg.import  rapier_snapshot.svg.import  rapier_static_body_3d.svg.import  rb3d.svg.import  shape_box.svg.import  shape_capsule.svg.import  shape_cylinder.svg.import  shape_sphere.svg.import  sphere_shape3d.svg.import
addons/godot-rapier-3d/old-src/src/: config.rs
addons/godot-rapier-3d/rust/: Cargo.toml
addons/godot-rapier-3d/rust/.cargo/: config.toml
addons/godot-rapier-3d/rust/src/: collider.rs  config.rs  debug_render_pipeline.rs  engine.rs  lib.rs  log.rs  lookups.rs  objects.rs  physics_pipeline.rs  physics_state.rs  pipeline.rs  (+3 more)
addons/godot-rapier-3d/src/: collider.rs  funny_player.rs  lib.rs  physics_pipeline.rs  rigid_body.rs  utils.rs
docs/: .pdm-python  characters.md  mkdocs.yml  pyproject.toml  rebuild.md  web-builds.md
docs/content/: contributing.md  determinism.md  gr3d diagram.excalidraw  index.md  quickstart.md  roadmap.md  snapshotting.md  stepping.md
docs/notes/: character types.md  flow.md  identification.md  lookup table.md  node cache.md  spawning.md
(+413 files in other folders)
