[package]
name = "godot-rapier-3d"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
bincode = "1.3.3"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rapier3d = { version = "0.18.0", features = [ "enhanced-determinism", "serde-serialize", "debug-render" ] }
serde = { version = "1.0.201", features = ["derive"] }

[profile.dev.package.rapier3d]
opt-level = 3
